--- a/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
+++ b/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
@@ -3,7 +3,7 @@
     <!-- 1. Общие положения -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isBase = !isBase">
-            <p class="text-2xl text-lh-primary font-bold">1. Общие положения</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">1. Общие положения</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isBase }"
@@ -39,7 +39,7 @@
             class="flex w-full justify-between gap-2 cursor-pointer"
             (click)="isPersonalInformation = !isPersonalInformation"
         >
-            <p class="text-2xl text-lh-primary font-bold">
+            <p class="text-2xl/7.5 text-lh-primary font-bold">
                 2. Персональная информация Пользователя, которую получает и обрабатывает Сайт
             </p>
             <tui-icon
@@ -109,7 +109,7 @@
     <!-- 3. Цели сбора и обратобки персональной информации Пользователей -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isPurposes = !isPurposes">
-            <p class="text-2xl text-lh-primary font-bold">
+            <p class="text-2xl/7.5 text-lh-primary font-bold">
                 3. Цели сбора и обработки персональной информации Пользователей
             </p>
             <tui-icon
@@ -151,7 +151,7 @@
     <!-- 4. Правовые основания обработки персональных данных -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isLegalGrounds = !isLegalGrounds">
-            <p class="text-2xl text-lh-primary font-bold">4. Правовые основания обработки персональных данных</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">4. Правовые основания обработки персональных данных</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isLegalGrounds }"
@@ -179,7 +179,7 @@
     <!-- 5. Порядок сбора, хренения, передачи и других видов обработки персональных данных -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isProcedure = !isProcedure">
-            <p class="text-2xl text-lh-primary font-bold">
+            <p class="text-2xl/7.5 text-lh-primary font-bold">
                 5. Порядок сбора, хранения, передачи и других видов обработки персональных данных
             </p>
             <tui-icon
@@ -241,7 +241,7 @@
             class="flex w-full justify-between gap-2 cursor-pointer"
             (click)="isSecurityMeasures = !isSecurityMeasures"
         >
-            <p class="text-2xl text-lh-primary font-bold">
+            <p class="text-2xl/7.5 text-lh-primary font-bold">
                 6. Меры, применяемые для защиты персональных данных Пользователей
             </p>
             <tui-icon
@@ -264,7 +264,7 @@
     <!-- 7. Заключительные положения политики -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isFinalProvisions = !isFinalProvisions">
-            <p class="text-2xl text-lh-primary font-bold">7. Заключительные положения Политики</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">7. Заключительные положения Политики</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isFinalProvisions }"
