--- a/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
+++ b/last-hearth-landing/src/app/profile/admin/confirm-reject/confirm-reject.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit.next()" class="flex flex-col gap-2">
     <div class="flex flex-col gap-1">
-        <p class="text-2xl">Причина отклонения анкеты</p>
+        <p class="text-2xl/7.5">Причина отклонения анкеты</p>
         <label tuiLabel>
             <tui-textfield [tuiTextfieldCleaner]="false">
                 <textarea
