--- a/last-hearth-landing/src/app/public-offer/public-offer/public-offer.component.html
+++ b/last-hearth-landing/src/app/public-offer/public-offer/public-offer.component.html
@@ -10,7 +10,7 @@
     <!-- 1. Термины и определения -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isTerms = !isTerms">
-            <p class="text-2xl text-lh-primary font-bold">1. Термины и определения</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">1. Термины и определения</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isTerms }"
@@ -62,7 +62,7 @@
             class="flex w-full justify-between gap-2 cursor-pointer"
             (click)="isGeneralProvisions = !isGeneralProvisions"
         >
-            <p class="text-2xl text-lh-primary font-bold">2. Общие положения</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">2. Общие положения</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isGeneralProvisions }"
@@ -105,7 +105,7 @@
             class="flex w-full justify-between gap-2 cursor-pointer"
             (click)="isRightsAndObligations = !isRightsAndObligations"
         >
-            <p class="text-2xl text-lh-primary font-bold">3. Права и обязанности сторон</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">3. Права и обязанности сторон</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isRightsAndObligations }"
@@ -156,7 +156,7 @@
     <!-- 4. Ответственность сторон -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isResponsibility = !isResponsibility">
-            <p class="text-2xl text-lh-primary font-bold">4. Ответственность сторон</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">4. Ответственность сторон</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isResponsibility }"
@@ -194,7 +194,7 @@
     <!-- 5. Условия возврата -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isTermsOfReturn = !isTermsOfReturn">
-            <p class="text-2xl text-lh-primary font-bold">5. Условия возврата</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">5. Условия возврата</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isTermsOfReturn }"
@@ -214,7 +214,7 @@
     <!-- 6. Персональные данные -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isPersonalData = !isPersonalData">
-            <p class="text-2xl text-lh-primary font-bold">6. Персональные данные</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">6. Персональные данные</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isPersonalData }"
@@ -238,7 +238,7 @@
     <!-- 7. Применимое законодательство и разрешение споров -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isLegislation = !isLegislation">
-            <p class="text-2xl text-lh-primary font-bold">7. Применимое законодательство и разрешение споров</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">7. Применимое законодательство и разрешение споров</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isLegislation }"
@@ -261,7 +261,7 @@
     <!-- 8. Реквизиты Исполнителя -->
     <div class="flex flex-col gap-2 shadow-2xs">
         <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isRequisites = !isRequisites">
-            <p class="text-2xl text-lh-primary font-bold">8. Реквизиты Исполнителя</p>
+            <p class="text-2xl/7.5 text-lh-primary font-bold">8. Реквизиты Исполнителя</p>
             <tui-icon
                 icon="@tui.chevron-down"
                 [ngClass]="{ 'rotate-180!': isRequisites }"
