--- a/last-hearth-landing/src/app/titles/duke/duke-title/duke-title.component.html
+++ b/last-hearth-landing/src/app/titles/duke/duke-title/duke-title.component.html
@@ -2,27 +2,27 @@
     <p class="text-3xl font-semibold">Возможности, которые открывает титул "Великий герцог":</p>
     <div class="flex gap-4 flex-wrap justify-center">
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.paintbrush-vertical" class="text-3xl" /> Цветной ник в игре
         </p>
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.sparkle" class="text-3xl" /> Роль в дискорде
         </p>
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.lock" class="text-3xl" /> Два участка привата площадью 20х20х20 блоков
         </p>
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.lightbulb" class="text-3xl" /> Приоритет в предложениях
         </p>
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.door-open" class="text-3xl" /> Заход с вайпом в первой очереди
         </p>
