--- a/last-hearth-landing/src/app/titles/how-to-buy/how-to-buy/how-to-buy.component.html
+++ b/last-hearth-landing/src/app/titles/how-to-buy/how-to-buy/how-to-buy.component.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col gap-8">
-    <p class="text-2xl text-lh-primary font-semibold">Как приобрести титул или набор?</p>
+    <p class="text-2xl/7.5 text-lh-primary font-semibold">Как приобрести титул или набор?</p>
     <div class="flex flex-col gap-4">
         <div class="flex items-center gap-10">
             <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">1</p>
-            <p class="text-lh-primary text-2xl font-bold">
+            <p class="text-lh-primary text-2xl/7.5 font-bold">
                 Перейти на
                 <a
                     class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
@@ -15,13 +15,13 @@
         </div>
         <div class="flex items-center gap-10">
             <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">2</p>
-            <p class="text-lh-primary text-2xl font-bold">
+            <p class="text-lh-primary text-2xl/7.5 font-bold">
                 Отправить донат на сумму стоимости титула или набора, его название и свой игровой ник в сообщении.
             </p>
         </div>
         <div class="flex items-center gap-10">
             <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">3</p>
-            <p class="text-lh-primary text-2xl font-bold">Дождаться выдачи привилегии на сервере.</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Дождаться выдачи привилегии на сервере.</p>
         </div>
     </div>
     <div class="text-xl">
