--- a/last-hearth-landing/src/app/welcome/welcome.component.html
+++ b/last-hearth-landing/src/app/welcome/welcome.component.html
@@ -18,7 +18,7 @@
     >
         <h2 class="text-5xl xl:text-8xl 2xl:text-[136px] font-bold mb-4 uppercase !text-shadow-lg">Last Hearth</h2>
 
-        <p class="text-2xl lg:text-5xl font-semibold mt-2 !text-shadow-lg">VINTAGE STORY СЕРВЕР</p>
+        <p class="text-2xl/7.5 lg:text-5xl font-semibold mt-2 !text-shadow-lg">VINTAGE STORY СЕРВЕР</p>
 
         <div
             class="mt-12 lg:mt-20 w-full flex flex-col lg:flex-row gap-8 justify-center lg:justify-between items-start px-0 lg:px-12"
