--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -11,7 +11,7 @@
             </div>
             <div class="flex flex-col gap-6 w-full items-start">
                 <div class="flex flex-col gap-2 items-start">
-                    <h1 class="text-2xl md:text-4xl uppercase font-bold text-shadow-md text-neutral-100">
+                    <h1 class="text-2xl/7.5 md:text-4xl uppercase font-bold text-shadow-md text-neutral-100">
                         {{ data().title }}
                     </h1>
                     <span class="bg-[#c35a17] text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl">
