--- a/last-hearth-landing/src/app/profile/admin/admin.component.html
+++ b/last-hearth-landing/src/app/profile/admin/admin.component.html
@@ -31,18 +31,18 @@ settlements === null || settlements?.length === 0;
 
     <div class="mt-2 flex flex-col gap-4">
         @switch (activeItemIndex) { @case (0) {
-        <p *ngIf="requestExist" class="text-2xl my-6 uppercase font-bold text-[#bdb093] self-center">
+        <p *ngIf="requestExist" class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">
             Анкеты игроков отсутствуют...
         </p>
         @for (item of veriverificationRequests; track $index) {
         <app-player-verify-request [data]="item" (requestWasWatched)="dataUpdate()" /> } } @case (1) {
-        <p *ngIf="settlementsRequest" class="text-2xl my-6 uppercase font-bold text-[#bdb093] self-center">
+        <p *ngIf="settlementsRequest" class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">
             Анкеты селений отсутствуют...
         </p>
         @for (item of settlements; track $index) { <app-settlement-verification-request [data]="item" /> }} @case (2) {
         <app-create-question-form />
         } @case (3) {
-        <p class="text-2xl my-6 uppercase font-bold text-[#bdb093] self-center">В разработке...</p>
+        <p class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">В разработке...</p>
         }}
     </div>
 </div>
