--- a/last-hearth-landing/src/app/profile/create-settlement-from/create-settlement-from.component.html
+++ b/last-hearth-landing/src/app/profile/create-settlement-from/create-settlement-from.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-6 w-full">
-    <p class="text-2xl text-lh-primary">Создавайте и процветайте...</p>
+    <p class="text-2xl/7.5 text-lh-primary">Создавайте и процветайте...</p>
     <form [formGroup]="form" class="flex flex-col gap-6 w-full" (ngSubmit)="onSubmit.next()">
         <div class="flex flex-col gap-1">
             <p class="text-xl">Какое будет название? <span class="text-red-700">*</span></p>
