--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -3,7 +3,7 @@
     <div class="flex gap-8 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">1</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Скачайте игру версии 1.20.12</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Скачайте игру версии 1.20.12</p>
             <p class="text-lh-primary text-base">
                 Приобрести игру можно на
                 <a
@@ -29,7 +29,7 @@
     <div class="flex gap-8 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">2</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Добавьте наш сервер</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Добавьте наш сервер</p>
             <p class="text-lh-primary text-base">
                 Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>play.lasthearth.ru</b><br />Пароль:
                 <b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b>
@@ -40,7 +40,7 @@
     <div class="flex gap-8 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">3</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Играйте</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Играйте</p>
             <p class="text-lh-primary text-base">
                 Выполнив все шаги - вы можете приступить к полноценной игре. Если у вас возникнут какие-либо сложности,
                 вы всегда можете попросить помощи у других игроков или у администрации. Узнать свой ответ быстро можно у
