--- a/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement-card/settlement-card.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="flex flex-col gap-6 w-full items-start">
             <div class="flex flex-col gap-2 items-start">
-                <h1 class="text-2xl md:text-4xl uppercase font-bold text-shadow-md text-neutral-100">
+                <h1 class="text-2xl/7.5 md:text-4xl uppercase font-bold text-shadow-md text-neutral-100">
                     {{ data().name }}
                 </h1>
 
@@ -19,7 +19,10 @@
                         {{getSettlementTypeByKey(data().type)}}
                     </span>
                     <span
-                        class="bg-green-600 uppercase text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
+                        [class.!bg-green-600]="data().diplomacy === 'Мирный'"
+                        [class.!bg-neutral-600]="data().diplomacy === 'Нейтральный'"
+                        [class.!bg-red-600]="data().diplomacy === 'Агрессивный'"
+                        class="uppercase text-neutral-100 font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
                     >
                         {{data().diplomacy}}
                     </span>
@@ -33,13 +36,13 @@
             <hr class="h-px bg-neutral-200 w-full mt-2 rounded-full" />
             <div class="flex flex-wrap gap-3">
                 <span class="bg-[#6f9ff8] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl">
-                    {{data().leader.user_id}}
+                    {{leader}}
                 </span>
-                @for (item of data().members; track $index) {
+                @for (item of users; track $index) {
                 <span
                     class="bg-[rgb(148,90,50)] text-neutral-100 font-bold text-xs md:text-base px-3 p-1.5 rounded-2xl"
                 >
-                    {{item.user_id}}
+                    {{item}}
                 </span>
                 }
             </div>
