--- a/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
+++ b/last-hearth-landing/src/app/settlements/settlement/settlement.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     } } @else { @if(settlement === null) {
-    <p class="text-2xl my-6 uppercase font-bold text-[#bdb093] self-center">
+    <p class="text-2xl/7.5 my-6 uppercase font-bold text-[#bdb093] self-center">
         Вы не владеете и не состоите в поселении...
     </p>
     <div class="flex justify-center w-full gap-4">
@@ -47,7 +47,12 @@
             </div>
             <div class="flex gap-3 items-center">
                 <p class="text-xl font-semibold">Дипломатический статус:</p>
-                <span class="bg-[#c35a17] uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl">
+                <span
+                    [class.!bg-green-600]="settlement.diplomacy === 'Мирный'"
+                    [class.!bg-neutral-600]="settlement.diplomacy === 'Нейтральный'"
+                    [class.!bg-red-600]="settlement.diplomacy === 'Агрессивный'"
+                    class="bg-[#c35a17] uppercase font-bold text-xs md:text-sm px-3 p-1.5 rounded-2xl"
+                >
                     {{settlement.diplomacy}}
                 </span>
             </div>
