--- a/last-hearth-landing/src/app/start-game/start-game.component.html
+++ b/last-hearth-landing/src/app/start-game/start-game.component.html
@@ -4,7 +4,7 @@
     <div class="flex gap-10 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">1</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Установите игру</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Установите игру</p>
             <p class="text-lh-primary text-lg">
                 Для установки игры воспользуйтесь
                 <a
@@ -30,7 +30,7 @@
     <div class="flex gap-10 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">2</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Создайте аккаунт</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Создайте аккаунт</p>
             <p class="text-lh-primary text-lg">
                 Для безопасной и комфортной игры вам необходимо
                 <a
@@ -54,7 +54,7 @@
     <div class="flex gap-10 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">3</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Играйте</p>
+            <p class="text-lh-primary text-2xl/7.5 font-bold">Играйте</p>
             <p class="text-lh-primary text-base">
                 Войдите в игру и добавьте наш сервер. Ip адрес и пароль доступны в профиле после прохождения
                 верификации.<br />Наслаждайтесь игрой.
