--- a/last-hearth-landing/src/app/titles/knight/knight-title/knight-title.component.html
+++ b/last-hearth-landing/src/app/titles/knight/knight-title/knight-title.component.html
@@ -2,12 +2,12 @@
     <p class="text-3xl font-semibold">Возможности, которые открывает титул "Рыцарь":</p>
     <div class="flex gap-4">
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.paintbrush-vertical" class="text-3xl" /> Цветной ник в игре
         </p>
         <p
-            class="text-2xl font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
+            class="text-2xl/7.5 font-semibold flex items-center gap-2 border-2 rounded-2xl border-amber-600 p-2 bg-transparent size-fit"
         >
             <tui-icon icon="@tui.sparkle" class="text-3xl" /> Роль в дискорде
         </p>
