--- a/last-hearth-landing/src/app/titles/title-card/title-card.component.html
+++ b/last-hearth-landing/src/app/titles/title-card/title-card.component.html
@@ -4,7 +4,7 @@
         alt="image"
         class="shadow-xl rounded-4xl size-16 sm:size-28 md:size-auto hover:scale-[102%] transition-all duration-200 hover:rotate-3 hover:shadow-2xl"
     />
-    <p class="md:text-2xl text-base font-semibold text-lh-primary text-center">{{data().title}}</p>
+    <p class="md:text-2xl/7.5 text-base font-semibold text-lh-primary text-center">{{data().title}}</p>
     <p class="md:text-base text-sm font-semibold text-lh-primary bg-[#bdb093] px-2 py-1 rounded-xl">{{data().type}}</p>
     <p
         [ngClass]="{ '!bg-lh-accent-1': select === data().path}"
