--- a/last-hearth-landing/src/app/titles/titles.component.html
+++ b/last-hearth-landing/src/app/titles/titles.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-8 p-6">
     <p class="text-4xl font-bold text-lh-primary">Магазин</p>
-    <p class="text-2xl font-semibold text-lh-primary">
+    <p class="text-2xl/7.5 font-semibold text-lh-primary">
         Покупая титул или набор на нашем сервере вы приобретаете уникальные возможности и ресурсы для вашего комфортного
         развития.
     </p>
